[package]
name = "webviewbuilder_win"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"
publish = false

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef"] }
webview2 = "0.1.0-beta.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
winit = { version = "0.22.2" }

[workspace]
members = [
    "example"
]