[package]
name = "example-winit-msedge-webview2"
version = "0.1.0"
authors = ["Jari Pennanen <ciantic@oksidi.com>"]
edition = "2018"
publish = false

[dependencies]
webviewbuilder_win = { version = "0.1.0", path = "../" }
serde = { version = "1.0.114", features = ["derive"] }
winit = { version = "0.24" }
